<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.ComponentesMaterialDesign.MainActivity">
    <group>
        <item android:id="@+id/nav_item_one"
            android:icon="@android:drawable/star_on"
            android:title="@string/item1_nav" />
        <item android:id="@+id/nav_item_two"
            android:icon="@android:drawable/ic_dialog_email"
            android:title="@string/item2_nav" />
        <item android:id="@+id/nav_item_three"
            android:icon="@android:drawable/ic_dialog_alert"
            android:title="@string/item3_nav" />
    </group>
    <group android:id="@+id/group_menu">
        <item android:id="@+id/nav_item_four"
            android:title="@string/item4_nav" />
        <item android:id="@+id/nav_item_five"
            android:title="@string/item5_nav" />
    </group>
    <item android:title="Title 1">
        <menu>
            <item android:id="@+id/nav_item_six"
                android:icon="@android:drawable/ic_dialog_map"
                android:title="@string/item6_nav" />
            <item android:id="@+id/nav_item_seven"
                android:icon="@android:drawable/arrow_down_float"
                android:title="@string/item7_nav" />
        </menu>
    </item>
</menu>